#8 update sonar para java 8